# datatype-recovery-experiments

./: .gitignore  README.md  setup.cfg
datatype_recovery/: __init__.py  dragon_cmdline.py  dragon_ryder.py  dragon_ryder_cmdline.py  eval_dataset.py
datatype_recovery/comparisons/: plots.py  resym.py  tygr.py
datatype_recovery/experiments/: __init__.py  basic_dataset.py  cc_wrapper.py  dataset_analysis.py  dwarf_lineprogram_filenames.py  dwarflib.py  eval_simple_types.py  import_dataset.py
datatype_recovery/models/: __init__.py  eval.py  heteromodels.py  homomodels.py  metrics.py  model_repo.py  plot_train_metrics.ipynb  structural_model.py  training.py
datatype_recovery/models/dataset/: __init__.py  balance.py  encoding.py  inmemtypesequencedataset.py  simpletypedataset.py  split.py  typeseqprojections.py  typesequencedataset.py  variablegraphbuilder.py
datatype_recovery/scripts/: angr_func_hash.py  build_resym_datasets.sh.sh  run_dragon_eval.py  run_tygr_eval.py
notebooks/: DebugEncoding.train_metrics.csv  ToggleProgressBars.vb  __old_pyg_sandbox.ipynb  align_with_TYGR.ipynb  ast_sandbox.ipynb  bool_debug.ipynb  characterize_dataset.html  characterize_dataset.ipynb  dataset_balance.ipynb  dragon_results.ipynb  dylan_retyper_sandbox.ipynb  edge_encoding_parentChild.ipynb  eval.ipynb  eval_NEW_ENCODING.ipynb  hgt_sandbox.ipynb  hybrid_alignment.ipynb  inmem_dataset.ipynb  member_offset_recovery.ipynb  member_offsets.ipynb  member_offsets_DatasetApproach.ipynb  metrics.ipynb  model0.ipynb  new_encoding.ipynb  pyg_dataset_sandbox.ipynb  retyping_sandbox.ipynb  split_test_set.ipynb  structural_model.ipynb  test.ipynb  tyda_bigger_dataset.ipynb  tyda_dataset.ipynb  type_projections.ipynb  vgraph_viewer.ipynb
notebooks/eval_simple_types/: compare_models.ipynb  dragon_ryder_details.ipynb
