[metadata]
name = datatype_recovery
version = 0.0.1

[options]
packages = find:
install_requires =
    pyelftools
    # this works, but I need wildebeest to be editable right now :)
    # wildebeest @ git+ssh://git@github.com/lasserre/wildebeest.git#egg=wildebeest
    # astlib @ git+ssh://git@github.com/lasserre/phd.git#egg=astlib&subdirectory=research/ast-models/astlib
    astlib @ git+ssh://git@github.com/lasserre/astlib.git
    wandb
    ipywidgets
    plotly
    tqdm
    pyhidra
    torchsummary

[options.entry_points]
wildebeest.experiments =
    basic_dataset = datatype_recovery.experiments.basic_dataset:BasicDatasetExp
# console_scripts =
#     extract_func_addrs = funcprotos.scripts.extract_func_addrs:main
