[metadata]
name = datatype_recovery
version = 0.0.1

[options]
packages = find:
install_requires =
    pyelftools
    # this works, but I need wildebeest to be editable right now :)
    # wildebeest @ git+ssh://git@github.com/lasserre/wildebeest.git#egg=wildebeest
    # astlib @ git+ssh://git@github.com/lasserre/astlib.git
    wandb
    ipywidgets
    plotly
    tqdm
    pyhidra
    rich
    torchsummary

[options.entry_points]
wildebeest.experiments =
    basic_dataset = datatype_recovery.experiments.basic_dataset:BasicDatasetExp
console_scripts =
    dragon = datatype_recovery.dragon_cmdline:main
    dragon-ryder = datatype_recovery.dragon_ryder_cmdline:main
    eval_simple_types = datatype_recovery.experiments.eval_simple_types:main
#     extract_func_addrs = funcprotos.scripts.extract_func_addrs:main
